fix: api response fix (#348)